chore: added users/validate
